# vietlegal-e5

./: .gitignore  LICENSE  README.md  config.yaml  plan.md  pyproject.toml  report.md  requirements.txt
docs/superpowers/plans/: 2026-03-24-vietlegal-e5-plan.md
docs/superpowers/specs/: 2026-03-24-vietlegal-e5-design.md
scripts/: evaluate.py  export.py  generate_queries.py  mine_hard_negatives.py  prepare_data.py  prepare_training.py  train_contrastive.py  train_hard_neg.py  train_multitask.py  train_tsdae.py  utils.py
